--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "@vercel/analytics": "^1.4.1",
     "lucide-react": "^0.461.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
